Try with G1GC