@@ -20,8 +20,7 @@ testGrouping in Test <<= definedTests in Test map { tests =>
       tests = Seq(test),
       runPolicy = SubProcess(javaOptions = Seq(
         "-server", "-Xms4096m", "-Xms4096m", "-XX:NewSize=3584m", "-Xss256k", "-XX:+TieredCompilation",
-        "-XX:+UseParNewGC", "-XX:+UseConcMarkSweepGC", "-XX:+UseCondCardMark",
-        "-XX:+UseNUMA", "-XX:-UseBiasedLocking", "-XX:+AlwaysPreTouch") ++
+        "-XX:+UseG1GC", "-XX:+UseNUMA", "-XX:-UseBiasedLocking", "-XX:+AlwaysPreTouch") ++
         sys.props.map { case (k, v) => s"-D$k=$v" }))
   }.sortBy(_.name)
 }
